<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="24sp"
        android:textColor="@android:color/primary_text_dark"
        android:textStyle="bold"
        android:id="@+id/tv_reg_title"
        android:text="@string/register_title"
        android:layout_marginBottom="16dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:background="@color/colorAccent" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/tv_reg_title">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_txt"
            android:id="@+id/lbl_reg_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_reg_name"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lbl_reg_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_txt"
            android:id="@+id/lbl_reg_email"
            android:layout_below="@+id/et_reg_name"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_reg_email"
            android:layout_below="@+id/lbl_reg_email"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_txt"
            android:id="@+id/lbl_reg_password"
            android:layout_below="@+id/et_reg_email"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_reg_password"
            android:layout_below="@+id/lbl_reg_password"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_reg_birthday"
            android:layout_below="@+id/et_reg_password"
            android:layout_alignParentStart="true"
            android:text="@string/birthday_txt" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/et_reg_bday"
            android:layout_below="@+id/lbl_reg_birthday"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/btn_bday"
            android:hint="mm/dd/yyyy" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_txt"
            android:id="@+id/btn_bday"
            android:layout_alignBottom="@+id/et_reg_bday"
            android:layout_alignEnd="@+id/et_reg_password" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_txt"
            android:id="@+id/btn_ok"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/btn_bday"
            android:layout_alignEnd="@+id/btn_bday" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_gravity="center_vertical"
            android:layout_alignTop="@+id/btn_ok"
            android:layout_toStartOf="@+id/btn_ok" />

    </RelativeLayout>





</RelativeLayout>
